# block-world

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp
Resources/Shaders/Blocks/World/: block_shader.frag  block_shader.geom  block_shader.vert  shadows.geom  shadows.vert
Resources/Shaders/GUI/: vector.frag
Resources/Shaders/World/: skybox.frag  skybox.vert
dependencies/: CMakeLists.txt  glad.c
dependencies/glad/: glad.h
internal/: CMakeLists.txt
internal/parallelbitops/: ParallelBitOps.cpp  ParallelBitOps.hpp
src/: Application.cpp  Application.hpp  BinaryChunk.cpp  BinaryChunk.hpp  BlockMesh.cpp  BlockMesh.hpp  BlockUtils.hpp  Blocks.cpp  Blocks.hpp  Buffers.cpp  Buffers.hpp  CMakeLists.txt  Chunk.cpp  Chunk.hpp  ChunkData.hpp  ChunkModel.cpp  ChunkModel.hpp  Chunkset.cpp  Chunkset.h  Context.hpp  DayCycle.hpp  Debug.cpp  Debug.hpp  ExtendLong.cpp  ExtendLong.hpp  Input.cpp  Input.hpp  Log.cpp  Log.hpp  Main.cpp  PerlinNoise.hpp  Player.cpp  Player.hpp  Shader.cpp  Shader.hpp  Skybox.cpp  Skybox.hpp  Texture.cpp  Texture.hpp  ThreadList.hpp  (+9 more)
